- template 기능 구현 - n+1 테스트 추가